css changes for icons inside notes

--- a/src/scss/notecard.scss
+++ b/src/scss/notecard.scss
@@ -1,9 +1,8 @@
 .note-card-icon {
-  font-size: "10px";
-  .right {
-    padding-left: "3px";
-  }
-  .left {
-    padding-right: "3px";
-  }
+  margin-left: -25px;
+}
+
+.take-note-card {
+  margin-top: -12px;
+  font-size: 10px;
 }
