added info button to show updatedAt and createdAt timestamps, also added labelSlice for updating label

--- a/src/scss/labels.scss
+++ b/src/scss/labels.scss
@@ -1,1 +1,24 @@
+.edit-label-box {
+  font-size: 18px;
+}
+.edit-label-box .imp {
+  margin-left: -13px;
+}
+.edit-label-box .icons {
+  margin-left: 3px;
+  margin-right: 3px;
+}
 
+.edit-label-box-text {
+  font-size: 13px;
+  margin-top: -1px;
+}
+
+.edit-label-card {
+  width: auto;
+  min-height: 20px;
+  height: 2rem;
+}
+
+.edit-label-input:hover {
+}
