state changes in noteSlice for proper handling of note creation and update operation

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -93,3 +93,8 @@ input:-webkit-autofill:active {
   flex-direction: column;
   height: 100%;
 }
+
+.pin-heading {
+  color: #202124;
+  margin-left: 8px;
+}
