label chip to display labels into the note after checking the labelboxes

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -98,3 +98,9 @@ input:-webkit-autofill:active {
   color: #202124;
   margin-left: 8px;
 }
+
+.scroll-overflow {
+  max-height: 200px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
