scrolls added for side bar and inside take note creating labels

--- a/src/scss/notecard.scss
+++ b/src/scss/notecard.scss
@@ -6,3 +6,20 @@
   margin-top: -12px;
   font-size: 10px;
 }
+
+.content {
+  letter-spacing: 0.0142857143em;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+}
+
+.title {
+  letter-spacing: 0.00625em;
+  font-family: "Google Sans", Roboto, Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  padding-top: 12px;
+}
